# MyOpenGLGame

./: CMakeLists.txt  README.md  build.bat
resources/levels/: one.lvl  two.lvl
test/include/: ball_object.hpp  game.hpp  game_level.hpp  game_object.hpp  particle_generator.hpp  resource_manager.hpp  shader.hpp  sprite_renderer.hpp  stb_image.hpp  texture.hpp
test/src/: ball_object.cpp  game.cpp  game_level.cpp  game_object.cpp  main.cpp  particle_generator.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  texture.cpp
